[project]
name = "ceiling-radar"
version = "0.1.0"
description = "Project live aircraft from an ADS-B feed onto your ceiling."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.5",
    "numpy>=1.24",
    "requests>=2.28",
]

[project.scripts]
ceiling-radar = "ceiling_radar:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["ceiling_radar.py"]

[tool.hatch.build.targets.wheel.sources]
"ceiling_radar.py" = "ceiling_radar.py"
